rounded corners fix on mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -88,7 +88,7 @@ a {
   padding-right: 8px;
   display: block;
   margin: auto;
-  width: 600px;
+  width: auto;
   border-radius: 5px;
   margin-top: 15px;
 }
